add cancel and return for Order

--- a/src/app/ui/table/item-status-actions/item-status-actions.component.html
+++ b/src/app/ui/table/item-status-actions/item-status-actions.component.html
@@ -9,7 +9,7 @@
   <button type="button"
           *ngIf="item.canCanceled"
           (click)="item.cancel()"
-          class="btn btn-sm btn-primary"
+          class="btn btn-sm btn-info"
           title="cancel item"
   >CA</button>
   <button type="button"
