--- a/src/app/page/orders/orders.component.html
+++ b/src/app/page/orders/orders.component.html
@@ -55,7 +55,7 @@
               <div class="btn-group-vertical btn-group-sm" role="group">
                 <button class="btn btn-sm btn-{{action.color}}"
                         [title]="action.title"
-                        *ngFor="let action of model.orderActions(order)"
+                        *ngFor="let action of orderActions(order)"
                         (click)="action.handler()"
                         type="button"
 
