--- a/src/app/ui/table/account-balances-table/account-balances-table.component.html
+++ b/src/app/ui/table/account-balances-table/account-balances-table.component.html
@@ -1,8 +1,8 @@
 <h2>{{holder | uppercase}}: ({{count}}) {{balance | convert}}</h2>
 <button type="button"
         *ngIf="hasSettlement"
-        (click)="model.doSellerSettlement(holder)"
-        [disabled]="!model.canSellerSettlement(holder)"
+        (click)="model.doSellerSettlement(holder, dateService.getDate())"
+        [disabled]="!model.canSellerSettlement(holder, dateService.getDate())"
         class="btn btn-sm btn-primary"
         title="refund"
 >create settlement</button>
