--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-toasts aria-live="polite" aria-atomic="true"></app-toasts>
 <app-layout>
   <app-menu [list]="menu" [heading]="title"></app-menu>
   <router-outlet></router-outlet>
