fix style orders columns

--- a/src/app/page/orders/orders.component.html
+++ b/src/app/page/orders/orders.component.html
@@ -9,9 +9,9 @@
       <table class="table table-bordered pure-table pure-table-horizontal">
         <thead class="thead-light text-center align-middle">
         <tr>
-          <th scope="col" rowspan="2">Order No#</th>
+          <th scope="col" rowspan="2" class="align-middle text-center">Order No#</th>
           <th rowspan="2" class="align-middle text-center">Date</th>
-          <th scope="col" rowspan="2">Customer</th>
+          <th scope="col" rowspan="2" class="align-middle text-center">Customer</th>
 
           <th scope="colgroup" colspan="2">Invoices</th>
           <th scope="colgroup" colspan="8">Items</th>
